Refactor API endpoints and enhance security configuration
Simplified API endpoint paths by removing "/api" prefix and updated CORS policies to allow specific origins. Improved security configuration by refining CSRF handling, adding JWT filters correctly, and introducing health check endpoints for monitoring.

need to fix the 403 error